syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.demo.user.proto";
option java_outer_classname = "UserProto";

service UserCrud {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  string message = 1;
}